Dashboard projects no longer require two clicks to view on mobile, closes #357.
Based on solution found here:

https://www.nczonline.net/blog/2012/07/05/ios-has-a-hover-problem/

--- a/app/assets/stylesheets/objects/projects.scss
+++ b/app/assets/stylesheets/objects/projects.scss
@@ -25,6 +25,6 @@
   display: none;
 }
 
-.projects-box:hover .handle {
+.no-touch .projects-box:hover .handle {
   display: inline-block;
 }
